# cxsom

./: README.md
cxsom/: CMakeLists.txt  README.md
cxsom-builder/: CMakeLists.txt  README.md
cxsom-builder/data-for-examples/: make-inputs-001-002.py  make-inputs-002-xxx.py
cxsom-builder/examples/: CMakeLists.txt  example-001-001-som.cpp  example-001-002-recsom.cpp  example-002-001-direct.cpp  example-002-002-associative.cpp  example-003-001-expand.cpp  example-003-001-experiment.cpp  example-003-002-experiment.cpp
cxsom-builder/experiments/experiment-003-001/: README.txt  feed-frozen.py  feed-main.py  feed-relax.py  make-frames.py  make-movie.py  makefile  sample.py  view-frozen-inputs.py  view-frozen.py  view-relaxation.py  view-weights.py
cxsom-builder/experiments/experiment-003-002/: README.txt  build-eye-input.py  build-prediction-inputs.py  display.py  frame-factory.py  makefile  reconstruct.py  show-inputs.py  show-prediction-output.py  show-rgb-mapping.py  show-samples.py  show-weights-history.py  weights-frames.py
cxsom-builder/src/: CMakeLists.txt  cxsom-builder.hpp  cxsombuilderArchi.hpp  cxsombuilderDot.hpp  cxsombuilderForward.hpp  cxsombuilderMain.hpp  cxsombuilderMap.hpp
cxsom-builder/viewer-for-examples/: view-001-001.py  view-001-002.py  view-002-001.py  view-002-002.py
cxsom/data-for-examples/: cxsom-make-inputs-004-001.py  cxsom-make-inputs-004-002.py
cxsom/debug/: README.md
cxsom/debug-tmp/: README.txt  analyse.cpp  argmax.cpp  makefile
cxsom/debug/argmax-debug/: analyse.cpp  argmax.cpp
cxsom/doc/: Doxyfile.in
cxsom/examples/: CMakeLists.txt  example-001-001-datafile.cpp  example-002-001-rules-basics.cpp  example-002-002-rules-all.cpp  example-002-003-namings.cpp  example-002-004-relaxation.cpp  example-002-005-ping.cpp  example-002-006-savings.cpp  example-003-001-som1d-R-map.cpp  example-003-002-som1d-R2-map.cpp  example-003-003-som2d-RGB-map.cpp  example-004-001-cxsom-circle-maps.cpp  example-004-002-cxsom-recsom-maps.cpp  example-005-001-custom-operation-header.hpp  example-005-001-foo-basic-test.cpp  example-005-001-foo-help.cpp  example-005-001-foo-operations.hpp  example-005-001-foo-processor.cpp  example-005-001-foo-rules.hpp
cxsom/pycxsom/: setup.py
cxsom/pycxsom/examples/: pycxsom-example-001-001-typing.py  pycxsom-example-001-002-typing.py  pycxsom-example-002-001-variable-basics.py  pycxsom-example-002-002-variable-kinds.py  pycxsom-example-002-003-variable-sync.py  pycxsom-example-002-004-sked.py  pycxsom-example-003-000-at-viewer.py  pycxsom-example-003-000-refresh-viewer.py  pycxsom-example-003-001-Map1D-Scalar-viewer.py  pycxsom-example-004-002-clear.py  pycxsom-example-005-001-plot-maps.py
cxsom/pycxsom/pycxsom/: __init__.py  client.py  monitor.py  plot.py  sked.py  tkviewer.py  typing.py  variable.py
cxsom/python-debug-tools/: README.md  plot-tca-files.py
cxsom/share/: CMakeLists.txt  cxsom-makefile
cxsom/spec/: Makefile  README.txt  algo.tex  commands-old.tex  commands.tex  cxsom-functions.tex  cxsom-implementation.tex  cxsom-introduction.tex  cxsom-model.tex  cxsom.tex  globalcommands.tex  math.tex  notations.py
cxsom/src/: CMakeLists.txt  all-instances.cpp  ask.cpp  clear.cpp  conditional-message.cpp  cxsom-processor.hpp  cxsom-rules.hpp  cxsom-server.hpp  cxsom-viewer.hpp  cxsomData.hpp  cxsomJobRule.hpp  cxsomJobs.hpp  cxsomLog.hpp  cxsomOperation.hpp  cxsomProtocol.hpp  cxsomProtocolClient.hpp  cxsomProtocolServer.hpp  cxsomRuleDefs.hpp  cxsomSymbols.hpp  cxsomTimeStep.hpp  cxsomUpdate.hpp  cxsomVariable.hpp  ping.cpp  processor.cpp
cxsom/tests/: CMakeLists.txt  test-000-001-type-basics.cpp  test-001-001-variable-basics.cpp  test-001-002-variable-center.cpp  test-002-001-update-basics.cpp  test-003-001-timestep-basics.cpp  test-004-001-jobs-basics.cpp  test-004-002-jobs-patterns.cpp  test-004-003-jobs-workers.cpp  test-005-001-operations.cpp
cxsom/viewer-for-examples/: cxsom-view-002-001.py  cxsom-view-002-004.py  cxsom-view-003-001.py  cxsom-view-003-002.py  cxsom-view-003-003.py  cxsom-view-004-001.py  cxsom-view-004-002.py  cxsom-view-005-001.py
experiments/: README.md
experiments/basic-recsom/: README.md  feed.py  history.py  makefile  recsom.cpp  view.py
experiments/basic-sked/: README.md  makefile  minmax.cpp  run-episode.py
experiments/basic-som/: README.md  feed.py  makefile  som.cpp  view.py
experiments/basic-xsom/: README.md  feed-frozen.py  feed-main.py  makefile  sample.py  show-input-shape.py  view-relaxation.py  view-weights.py  xsom.cpp
experiments/completion-xsom/: README.md  build-eye-input.py  eye.ppm  makefile  reconstruct.py  set-calibration.py  show-calibration.py  show-rgb-mapping.py  xsom.cpp
pycxsom/: README.md  pyproject.toml  setup.py
pycxsom/examples/: pycxsom-example-003-000-at-viewer.py  pycxsom-example-004-001-ping.py
pycxsom/pycxsom/: error.py  variable.py
sked/: CMakeLists.txt  README.md
sked/doc/: CMakeLists.txt  Doxyfile.in
sked/examples/: colormap.hpp  example-001-001-basic-queue.cpp  example-001-002-ack-queue.cpp  example-001-003-double-buffered-queue.cpp  example-001-004-serial-ack-queue.cpp  example-001-005-serial-double-buffered-queue.cpp  example-001-006-flushing.cpp  example-002-001-xrsw.cpp  example-002-002-xrsw-perf.cpp
sked/pysked/: pyproject.toml  setup.py
sked/src/: sked.hpp  skedCheckings.hpp  skedConcepts.hpp  skedQueue.hpp  skedVerbosity.hpp  skedXRSW.hpp
skednet/: CMakeLists.txt  README.md
skednet/doc/: Doxyfile.in
skednet/examples/: CMakeLists.txt  example-000-000-tcp.cpp  example-001-001-xrsw.cpp
skednet/src/: CMakeLists.txt  skednet.hpp  skednetProtocol.hpp  skednetScope.hpp  skednetService.hpp  xrsw.cpp
trash/: example-003-001-experiment.cpp  example-003-002-experiment.cpp
trash/experiment-003-001/: README.txt  make-frames.py  makefile  sample.py  view-frozen-inputs.py  view-relaxation.py
trash/experiment-003-002/: README.txt  build-img-coords.py  display.py  make-frame.py  show-calibration.py  show-samples.py  show-weights-history.py  wait_stable.py  weights-frames.py
(+3 files in other folders)
